@@ -564,6 +564,7 @@ char *cutcopylist; /* from menu.c */
 char enable_fast_exit; /* from menu.c 253 */
 char quiet_checkmenu;
 struct wave_script_args *wave_script_args; /* from tcl_helper.c */
+char ignore_savefile_pane_pos;
 char ignore_savefile_pos; /* from menu.c 255 */
 char ignore_savefile_size; /* from menu.c 256 */
 #ifndef WAVE_USE_MLIST_T
