@@ -4102,26 +4102,31 @@ void write_save_helper(FILE *wave) {
 		}
 #endif
 
-	if(GLOBALS->toppanedwindow)
+
+	if(!GLOBALS->ignore_savefile_pane_pos)
 		{
-		fprintf(wave, "[sst_width] %d\n", gtk_paned_get_position(GTK_PANED(GLOBALS->toppanedwindow)));
-		}
-	if(GLOBALS->panedwindow)
-		{
-		fprintf(wave, "[signals_width] %d\n", gtk_paned_get_position(GTK_PANED(GLOBALS->panedwindow)));
-		}
+		if(GLOBALS->toppanedwindow)
+			{
+			fprintf(wave, "[sst_width] %d\n", gtk_paned_get_position(GTK_PANED(GLOBALS->toppanedwindow)));
+			}
+		if(GLOBALS->panedwindow)
+			{
+			fprintf(wave, "[signals_width] %d\n", gtk_paned_get_position(GTK_PANED(GLOBALS->panedwindow)));
+			}
 
 #if GTK_CHECK_VERSION(2,4,0)
-	if(GLOBALS->expanderwindow)
-        	{
-		GLOBALS->sst_expanded = gtk_expander_get_expanded(GTK_EXPANDER(GLOBALS->expanderwindow));
-		fprintf(wave, "[sst_expanded] %d\n", GLOBALS->sst_expanded);
-		}
-	if(GLOBALS->sst_vpaned)
-		{
-		fprintf(wave, "[sst_vpaned_height] %d\n", gtk_paned_get_position(GTK_PANED(GLOBALS->sst_vpaned)));
-		}
+		if(GLOBALS->expanderwindow)
+	        	{
+			GLOBALS->sst_expanded = gtk_expander_get_expanded(GTK_EXPANDER(GLOBALS->expanderwindow));
+			fprintf(wave, "[sst_expanded] %d\n", GLOBALS->sst_expanded);
+			}
+		if(GLOBALS->sst_vpaned)
+			{
+			fprintf(wave, "[sst_vpaned_height] %d\n", gtk_paned_get_position(GTK_PANED(GLOBALS->sst_vpaned)));
+			}
 #endif
+		}
+
 
 	t=GLOBALS->traces.first;
 	while(t)
