@@ -1107,3 +1107,4 @@
 		Added sst_width, sst_vpaned_height, sst_expanded, and
 		signals_width tags into save file to allow pane size and
 		expander settings to be saved to the save file.
+		Add ignore_savefile_pane_pos .gtkwaverc variable.
